; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/tipc/extr_bcast.c_tipc_bclink_set_queue_limits.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/tipc/extr_bcast.c_tipc_bclink_set_queue_limits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bcl = common dso_local global i32 0, align 4
@ENOPROTOOPT = common dso_local global i32 0, align 4
@TIPC_MIN_LINK_WIN = common dso_local global i64 0, align 8
@TIPC_MAX_LINK_WIN = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i32 0, align 4
@bc_lock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tipc_bclink_set_queue_limits(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i32, i32* @bcl, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %9, label %6

6:                                                ; preds = %1
  %7 = load i32, i32* @ENOPROTOOPT, align 4
  %8 = sub nsw i32 0, %7
  store i32 %8, i32* %2, align 4
  br label %26

9:                                                ; preds = %1
  %10 = load i64, i64* %3, align 8
  %11 = load i64, i64* @TIPC_MIN_LINK_WIN, align 8
  %12 = icmp slt i64 %10, %11
  br i1 %12, label %17, label %13

13:                                               ; preds = %9
  %14 = load i64, i64* %3, align 8
  %15 = load i64, i64* @TIPC_MAX_LINK_WIN, align 8
  %16 = icmp sgt i64 %14, %15
  br i1 %16, label %17, label %20

17:                                               ; preds = %13, %9
  %18 = load i32, i32* @EINVAL, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %2, align 4
  br label %26

20:                                               ; preds = %13
  %21 = call i32 @spin_lock_bh(i32* @bc_lock)
  %22 = load i32, i32* @bcl, align 4
  %23 = load i64, i64* %3, align 8
  %24 = call i32 @tipc_link_set_queue_limits(i32 %22, i64 %23)
  %25 = call i32 @spin_unlock_bh(i32* @bc_lock)
  store i32 0, i32* %2, align 4
  br label %26

26:                                               ; preds = %20, %17, %6
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local i32 @tipc_link_set_queue_limits(i32, i64) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
